Blurred image 6, Fixed CSS for mobile

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -594,7 +594,8 @@ figure.effect-goliath:hover p {
 
 @media (max-width: 767px) {
   .tm-site-title {
-    font-size: 3rem;
+    /* font-size: 3rem; */
+    font-size: 1.35rem;
   }
   .tm-top-container {
     flex-direction: column-reverse;
@@ -646,6 +647,7 @@ figure.effect-goliath:hover p {
   }
 
   .tm-section-title {
+    margin: 1rem;
     font-size: 2.4rem;
   }
 }
